# lemon-API

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: CODEOWNERS
lemonapi/: __main__.py  facts.py  main.py  moderation.py  quotes.py
lemonapi/endpoints/: admin.py  chat.py  lemons.py  moderation.py  security.py  shortener.py
lemonapi/styles/: file.css
lemonapi/templates/: api_token.html  base.html  better-docs.html  docs.html  error.html  foo.html  form.html  login.html  test.html
lemonapi/utils/: auth.py  config.py  constants.py  crud.py  database.py  decorators.py  dependencies.py  keygen.py  middleware.py  models.py  promthutils.py  schemas.py  scopes.py
metrics/: config.monitoring  dashboard.json  datasource.yml  prometheus.yml
postgres/: init.sql
tests/: test_main.py
