[tool.poetry]
name = "lemon-api"
version = "0.1.0"
description = "Lemon api is a fast api based api about lemons"
authors = ["Nipa-Dev <nipathedev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
fastapi = "0.100.1"
httpx = "^0.27.0"
Jinja2 = "3.1.2"
loguru = "0.7.0"
passlib = "1.7.4"
pydantic-settings = "^2.2.1"
python-jose = "3.3.0"
python-multipart = "0.0.6"
python-ulid = "1.1.0"
uvicorn = "0.23.2"
validators = "0.20.0"
aioprometheus = {extras = ["starlette"], version = "^23.12.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
